src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>CSL Leads</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AreascurrentlyreferringtoISYS__c</fullName>
        <label>Areas currently referring to ISYS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Arizona__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer geographical location</description>
        <label>Arizona</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attorney__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attorney</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CEU_s_Required__c</fullName>
        <label>CEU&apos;s Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMexpectationspreferences__c</fullName>
        <label>CM expectations &amp; preferences</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMpetpeeves__c</fullName>
        <label>CM pet peeves?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSL_Lead_Source__c</fullName>
        <label>CSL Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Online Inbound</fullName>
                </value>
                <value>
                    <fullName>Prior Client</fullName>
                </value>
                <value>
                    <fullName>Google Search</fullName>
                </value>
                <value>
                    <fullName>Online Outbound</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Social Media Inbound</fullName>
                </value>
                <value>
                    <fullName>Networking Event</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Organic Farm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTCT2__Opted_Out_by_CTCT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If HasOptedOutOfEmail = true, this checkbox indicates whether the Opt Out originated in Salesforce or Constant Contact.</description>
        <label>Opted Out by Constant Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>California__c</fullName>
        <defaultValue>false</defaultValue>
        <label>California</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claims_Professional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claims Professional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompanyStructureTCMsetc__c</fullName>
        <label>Company Structure (TCMs, etc.)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consultant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_or_Vendor_Panel__c</fullName>
        <label>Contract or Vendor Panel</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContractorVendorPanel__c</fullName>
        <label>Contract or Vendor Panel</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credentials__c</fullName>
        <description>Pick list of Credentials</description>
        <label>Credentials</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BSN</fullName>
                </value>
                <value>
                    <fullName>CCM</fullName>
                </value>
                <value>
                    <fullName>CDMS</fullName>
                </value>
                <value>
                    <fullName>CNLCP</fullName>
                </value>
                <value>
                    <fullName>CPDM</fullName>
                </value>
                <value>
                    <fullName>CRC</fullName>
                </value>
                <value>
                    <fullName>CRRN</fullName>
                </value>
                <value>
                    <fullName>IVE</fullName>
                </value>
                <value>
                    <fullName>LVN</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MFT</fullName>
                </value>
                <value>
                    <fullName>MPA</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>PHN</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentNCMVendor__c</fullName>
        <label>Current NCM Vendor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CurrentReferralPatterns__c</fullName>
        <label>Current Referral Patterns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Education_Provider__c</fullName>
        <label>Current Education Provider</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Insurer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Insurer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmployersManagedbyCP__c</fullName>
        <label>Employers Managed by CP</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Florida__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Florida</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Safety_Employer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health/Safety Employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Human_Resources__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Human Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hurdles__c</fullName>
        <label>Hurdles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISYSEd_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISYSEd Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISYSEd_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISYSEd Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISYS_Admin_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISYS Admin Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISYS_Friends__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISYS Friends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISYS_Mgmt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISYS Mgmt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISYS_NCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISYS NCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISYS_Voc_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISYS Voc Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_House_NCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In-House NCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_House_UR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In-House UR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCPabletoselectCMvendor__c</fullName>
        <label>Is CP able to select CM vendor?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LVN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Client_Base__c</fullName>
        <label>Lead Client Base</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <inlineHelpText>Message from the web-to-lead form.</inlineHelpText>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nevada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nevada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Northern_California__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Northern California</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofClaimsProfessionals__c</fullName>
        <label>Number of Claims Professionals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OSHA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSHA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Course_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Course Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OperatingStateslocalandnationalwide__c</fullName>
        <label>Operating States (local and nationalwide</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Otherimportantinformation__c</fullName>
        <label>Other important information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PotentialareasCPcouldreferto__c</fullName>
        <label>Potential areas CP could refer to</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Employer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products_Interested_In__c</fullName>
        <label>Products Interested In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group Rates</fullName>
                </value>
                <value>
                    <fullName>Licensing</fullName>
                </value>
                <value>
                    <fullName>Custom Design</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Live Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReferralPotentialAnnually__c</fullName>
        <label>Referral Potential Annually</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rehab_Counselor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rehab Counselor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risk Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_SA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SI/SA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safety_Officer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety Officer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_Insured_Employer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self Insured Employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Southern_California__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Southern California</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TPA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Third Party Administrator</description>
        <label>TPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Frame_for_Project_Completion__c</fullName>
        <label>Time Frame for Project Completion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Employees__c</fullName>
        <label>Type of Employees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>W_C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W/C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WhichCMvendorsdoesCPreferto__c</fullName>
        <label>Which CM vendors does CP refer to?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Lead_CSL</fullName>
        <active>true</active>
        <businessProcess>CSL Leads</businessProcess>
        <label>Lead - CSL</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>